// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductCard /> should not render when no product could be found 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(ProductCard)>
    <ProductCard
      dispatch={[Function]}
      product={null}
      render={[Function]}
      shadow={true}
      style={Object {}}
    />
  </Connect(ProductCard)>
</Provider>
`;

exports[`<ProductCard /> should render as expected 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(ProductCard)
    productId="PR0DUCTID"
  >
    <ProductCard
      dispatch={[Function]}
      product={
        Object {
          "featuredImageUrl": null,
          "id": "PR0DUCTID",
          "name": "Product Name",
          "price": Object {
            "currency": "EUR",
            "discount": 50,
            "info": "Price Info",
            "unitPrice": 5,
            "unitPriceStriked": 10,
          },
          "rating": Object {
            "average": 80,
            "count": 4,
            "reviewCount": 3,
          },
        }
      }
      productId="PR0DUCTID"
      render={[Function]}
      shadow={true}
      style={Object {}}
    >
      <section
        className={
          Object {
            "data-css-5luenq": "",
          }
        }
        data-test-id="Product: Product Name"
        style={
          Object {
            "boxShadow": "0 4px 8px rgba(0, 0, 0, 0.16)",
          }
        }
      >
        <ProductCardRender
          hideName={false}
          hidePrice={false}
          hideRating={false}
          product={
            Object {
              "featuredImageUrl": null,
              "id": "PR0DUCTID",
              "name": "Product Name",
              "price": Object {
                "currency": "EUR",
                "discount": 50,
                "info": "Price Info",
                "unitPrice": 5,
                "unitPriceStriked": 10,
              },
              "rating": Object {
                "average": 80,
                "count": 4,
                "reviewCount": 3,
              },
            }
          }
          titleRows={3}
          url="/item/505230445543544944"
        >
          <Connect(Link)
            href="/item/505230445543544944"
            tagName="a"
          >
            <Link
              ariaLabel={null}
              className=""
              disabled={false}
              historyPush={[Function]}
              historyReplace={[Function]}
              href="/item/505230445543544944"
              replace={false}
              role="link"
              state={Object {}}
              tag="div"
              tagName="a"
            >
              <div
                aria-label={null}
                className="css-c6ki83 "
                data-test-id="link: /item/505230445543544944"
                onClick={[Function]}
                role="link"
              >
                <Component
                  alt="Product Name"
                  itemProp="image"
                  src={null}
                >
                  <ProductImage
                    alt="Product Name"
                    animating={true}
                    className={null}
                    forcePlaceholder={false}
                    highestResolutionLoaded={[Function]}
                    itemProp="image"
                    ratio={null}
                    resolutions={
                      Array [
                        Object {
                          "blur": 2,
                          "height": 50,
                          "width": 50,
                        },
                        Object {
                          "height": 440,
                          "width": 440,
                        },
                      ]
                    }
                    src={null}
                    srcmap={null}
                    widgetSettings={
                      Object {
                        "mocked": "widgetSetting",
                      }
                    }
                  >
                    <SurroundPortals
                      portalName="component.product-image"
                      portalProps={null}
                    >
                      <Portal
                        name="component.product-image.before"
                        props={null}
                      />
                      <Portal
                        name="component.product-image"
                        props={null}
                      >
                        <div
                          className="css-y5kkpq css-3hjqnz"
                        >
                          <div
                            className="css-1vq3byi"
                            data-test-id="placeHolder"
                          >
                            <Placeholder
                              className="css-19rc2oq"
                            >
                              <Icon
                                className="css-19rc2oq"
                                color={null}
                                content="<circle cx=\\"12\\" cy=\\"12\\" r=\\"3.2\\"/><path d=\\"M9 2L7.17 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2h-3.17L15 2H9zm3 15c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z\\"/><path d=\\"M0 0h24v24H0z\\" fill=\\"none\\"/>"
                                size="inherit"
                                viewBox="0 0 24 24"
                              >
                                <svg
                                  className="css-yys9hb css-19rc2oq"
                                  dangerouslySetInnerHTML={
                                    Object {
                                      "__html": "<circle cx=\\"12\\" cy=\\"12\\" r=\\"3.2\\"/><path d=\\"M9 2L7.17 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2h-3.17L15 2H9zm3 15c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z\\"/><path d=\\"M0 0h24v24H0z\\" fill=\\"none\\"/>",
                                    }
                                  }
                                  style={
                                    Object {
                                      "fill": null,
                                      "fontSize": "inherit",
                                    }
                                  }
                                  viewBox="0 0 24 24"
                                  xmlns="http://www.w3.org/2000/svg"
                                />
                              </Icon>
                            </Placeholder>
                          </div>
                        </div>
                      </Portal>
                      <Portal
                        name="component.product-image.after"
                        props={null}
                      />
                    </SurroundPortals>
                  </ProductImage>
                </Component>
                <ProductCardBadge
                  productId="PR0DUCTID"
                  style={Object {}}
                  value={-50}
                >
                  <div
                    className={
                      Object {
                        "data-css-7vxvfe": "",
                      }
                    }
                    style={Object {}}
                  >
                    <Portal
                      name="product-item.discount.before"
                      props={
                        Object {
                          "productId": "PR0DUCTID",
                        }
                      }
                    />
                    <Portal
                      name="product-item.discount"
                      props={
                        Object {
                          "productId": "PR0DUCTID",
                        }
                      }
                    >
                      <DiscountBadge
                        className=""
                        discount={null}
                        display="small"
                        text="-50%"
                      >
                        <div
                          data-test-id="-50%"
                        >
                          <Translate
                            className="css-pzju2o "
                            params={
                              Array [
                                null,
                              ]
                            }
                            string="-50%"
                          >
                            <span
                              className="css-pzju2o "
                            >
                              -50%
                            </span>
                          </Translate>
                        </div>
                      </DiscountBadge>
                    </Portal>
                    <Portal
                      name="product-item.discount.after"
                      props={
                        Object {
                          "productId": "PR0DUCTID",
                        }
                      }
                    />
                  </div>
                </ProductCardBadge>
                <div
                  className={
                    Object {
                      "data-css-1rbh2c4": "",
                    }
                  }
                >
                  <RatingStars
                    className=""
                    display="small"
                    isSelectable={false}
                    onSelection={[Function]}
                    value={80}
                  >
                    <div
                      aria-label="reviews.rating_stars"
                      className="css-13azwyo "
                      data-test-id="ratedStars: 4"
                    >
                      <div
                        className="css-4s85e9"
                      >
                        <div
                          className="css-kdb68h css-q4owmg"
                          key="1"
                        >
                          <Star
                            className=""
                            color={null}
                            size="1em"
                            viewBox="0 0 24 24"
                          >
                            <Icon
                              className=""
                              color={null}
                              content="<path d=\\"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\\"/>"
                              size="1em"
                              viewBox="0 0 24 24"
                            >
                              <svg
                                className="css-yys9hb "
                                dangerouslySetInnerHTML={
                                  Object {
                                    "__html": "<path d=\\"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\\"/>",
                                  }
                                }
                                style={
                                  Object {
                                    "fill": null,
                                    "fontSize": "1em",
                                  }
                                }
                                viewBox="0 0 24 24"
                                xmlns="http://www.w3.org/2000/svg"
                              />
                            </Icon>
                          </Star>
                        </div>
                        <div
                          className="css-kdb68h css-q4owmg"
                          key="2"
                        >
                          <Star
                            className=""
                            color={null}
                            size="1em"
                            viewBox="0 0 24 24"
                          >
                            <Icon
                              className=""
                              color={null}
                              content="<path d=\\"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\\"/>"
                              size="1em"
                              viewBox="0 0 24 24"
                            >
                              <svg
                                className="css-yys9hb "
                                dangerouslySetInnerHTML={
                                  Object {
                                    "__html": "<path d=\\"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\\"/>",
                                  }
                                }
                                style={
                                  Object {
                                    "fill": null,
                                    "fontSize": "1em",
                                  }
                                }
                                viewBox="0 0 24 24"
                                xmlns="http://www.w3.org/2000/svg"
                              />
                            </Icon>
                          </Star>
                        </div>
                        <div
                          className="css-kdb68h css-q4owmg"
                          key="3"
                        >
                          <Star
                            className=""
                            color={null}
                            size="1em"
                            viewBox="0 0 24 24"
                          >
                            <Icon
                              className=""
                              color={null}
                              content="<path d=\\"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\\"/>"
                              size="1em"
                              viewBox="0 0 24 24"
                            >
                              <svg
                                className="css-yys9hb "
                                dangerouslySetInnerHTML={
                                  Object {
                                    "__html": "<path d=\\"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\\"/>",
                                  }
                                }
                                style={
                                  Object {
                                    "fill": null,
                                    "fontSize": "1em",
                                  }
                                }
                                viewBox="0 0 24 24"
                                xmlns="http://www.w3.org/2000/svg"
                              />
                            </Icon>
                          </Star>
                        </div>
                        <div
                          className="css-kdb68h css-q4owmg"
                          key="4"
                        >
                          <Star
                            className=""
                            color={null}
                            size="1em"
                            viewBox="0 0 24 24"
                          >
                            <Icon
                              className=""
                              color={null}
                              content="<path d=\\"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\\"/>"
                              size="1em"
                              viewBox="0 0 24 24"
                            >
                              <svg
                                className="css-yys9hb "
                                dangerouslySetInnerHTML={
                                  Object {
                                    "__html": "<path d=\\"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\\"/>",
                                  }
                                }
                                style={
                                  Object {
                                    "fill": null,
                                    "fontSize": "1em",
                                  }
                                }
                                viewBox="0 0 24 24"
                                xmlns="http://www.w3.org/2000/svg"
                              />
                            </Icon>
                          </Star>
                        </div>
                        <div
                          className="css-kdb68h css-q4owmg"
                          key="5"
                        >
                          <Star
                            className=""
                            color={null}
                            size="1em"
                            viewBox="0 0 24 24"
                          >
                            <Icon
                              className=""
                              color={null}
                              content="<path d=\\"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\\"/>"
                              size="1em"
                              viewBox="0 0 24 24"
                            >
                              <svg
                                className="css-yys9hb "
                                dangerouslySetInnerHTML={
                                  Object {
                                    "__html": "<path d=\\"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\\"/>",
                                  }
                                }
                                style={
                                  Object {
                                    "fill": null,
                                    "fontSize": "1em",
                                  }
                                }
                                viewBox="0 0 24 24"
                                xmlns="http://www.w3.org/2000/svg"
                              />
                            </Icon>
                          </Star>
                        </div>
                      </div>
                      <div
                        className="css-16y9zin"
                      >
                        <div
                          className="css-kdb68h css-q4owmg"
                          key="6"
                        >
                          <Star
                            className=""
                            color={null}
                            size="1em"
                            viewBox="0 0 24 24"
                          >
                            <Icon
                              className=""
                              color={null}
                              content="<path d=\\"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\\"/>"
                              size="1em"
                              viewBox="0 0 24 24"
                            >
                              <svg
                                className="css-yys9hb "
                                dangerouslySetInnerHTML={
                                  Object {
                                    "__html": "<path d=\\"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\\"/>",
                                  }
                                }
                                style={
                                  Object {
                                    "fill": null,
                                    "fontSize": "1em",
                                  }
                                }
                                viewBox="0 0 24 24"
                                xmlns="http://www.w3.org/2000/svg"
                              />
                            </Icon>
                          </Star>
                        </div>
                        <div
                          className="css-kdb68h css-q4owmg"
                          key="7"
                        >
                          <Star
                            className=""
                            color={null}
                            size="1em"
                            viewBox="0 0 24 24"
                          >
                            <Icon
                              className=""
                              color={null}
                              content="<path d=\\"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\\"/>"
                              size="1em"
                              viewBox="0 0 24 24"
                            >
                              <svg
                                className="css-yys9hb "
                                dangerouslySetInnerHTML={
                                  Object {
                                    "__html": "<path d=\\"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\\"/>",
                                  }
                                }
                                style={
                                  Object {
                                    "fill": null,
                                    "fontSize": "1em",
                                  }
                                }
                                viewBox="0 0 24 24"
                                xmlns="http://www.w3.org/2000/svg"
                              />
                            </Icon>
                          </Star>
                        </div>
                        <div
                          className="css-kdb68h css-q4owmg"
                          key="8"
                        >
                          <Star
                            className=""
                            color={null}
                            size="1em"
                            viewBox="0 0 24 24"
                          >
                            <Icon
                              className=""
                              color={null}
                              content="<path d=\\"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\\"/>"
                              size="1em"
                              viewBox="0 0 24 24"
                            >
                              <svg
                                className="css-yys9hb "
                                dangerouslySetInnerHTML={
                                  Object {
                                    "__html": "<path d=\\"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\\"/>",
                                  }
                                }
                                style={
                                  Object {
                                    "fill": null,
                                    "fontSize": "1em",
                                  }
                                }
                                viewBox="0 0 24 24"
                                xmlns="http://www.w3.org/2000/svg"
                              />
                            </Icon>
                          </Star>
                        </div>
                        <div
                          className="css-kdb68h css-q4owmg"
                          key="9"
                        >
                          <Star
                            className=""
                            color={null}
                            size="1em"
                            viewBox="0 0 24 24"
                          >
                            <Icon
                              className=""
                              color={null}
                              content="<path d=\\"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\\"/>"
                              size="1em"
                              viewBox="0 0 24 24"
                            >
                              <svg
                                className="css-yys9hb "
                                dangerouslySetInnerHTML={
                                  Object {
                                    "__html": "<path d=\\"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\\"/>",
                                  }
                                }
                                style={
                                  Object {
                                    "fill": null,
                                    "fontSize": "1em",
                                  }
                                }
                                viewBox="0 0 24 24"
                                xmlns="http://www.w3.org/2000/svg"
                              />
                            </Icon>
                          </Star>
                        </div>
                      </div>
                    </div>
                  </RatingStars>
                  <ProductCardTitle
                    rows={3}
                    style={Object {}}
                    title="Product Name"
                  >
                    <div
                      className={
                        Object {
                          "data-css-by38mh": "",
                        }
                      }
                      data-test-id="Productname: Product Name"
                      style={Object {}}
                    >
                      <Ellipsis
                        className=""
                        ellipsis="..."
                        rows={3}
                      >
                        <Dotdotdot
                          clamp={3}
                          className=""
                          ellipsis="..."
                          tagName="div"
                          truncationChar="…"
                          useNativeClamp={true}
                        >
                          <div
                            className=""
                          >
                            Product Name
                          </div>
                        </Dotdotdot>
                      </Ellipsis>
                    </div>
                  </ProductCardTitle>
                  <Connect(MapPriceHint)
                    productId="PR0DUCTID"
                  >
                    <MapPriceHint
                      dispatch={[Function]}
                      price={
                        Object {
                          "currency": "EUR",
                          "discount": 50,
                          "info": "Price Info",
                          "unitPrice": 5,
                          "unitPriceStriked": 10,
                        }
                      }
                      productId="PR0DUCTID"
                    />
                  </Connect(MapPriceHint)>
                  <Connect(OrderQuantityHint)
                    productId="PR0DUCTID"
                  >
                    <OrderQuantityHint
                      dispatch={[Function]}
                      productId="PR0DUCTID"
                      stock={null}
                    />
                  </Connect(OrderQuantityHint)>
                  <ProductCardPrice
                    price={
                      Object {
                        "currency": "EUR",
                        "discount": 50,
                        "info": "Price Info",
                        "unitPrice": 5,
                        "unitPriceStriked": 10,
                      }
                    }
                    productId="PR0DUCTID"
                    style={Object {}}
                  >
                    <div
                      style={Object {}}
                    >
                      <Portal
                        name="product-item.price.before"
                        props={
                          Object {
                            "productId": "PR0DUCTID",
                          }
                        }
                      />
                      <Portal
                        name="product-item.price"
                        props={
                          Object {
                            "productId": "PR0DUCTID",
                          }
                        }
                      >
                        <Component
                          price={
                            Object {
                              "currency": "EUR",
                              "discount": 50,
                              "info": "Price Info",
                              "unitPrice": 5,
                              "unitPriceStriked": 10,
                            }
                          }
                        >
                          <ProductGridPrice
                            price={
                              Object {
                                "currency": "EUR",
                                "discount": 50,
                                "info": "Price Info",
                                "unitPrice": 5,
                                "unitPriceStriked": 10,
                              }
                            }
                          >
                            <Grid
                              className="css-1glzrmu"
                              component="ul"
                              wrap={true}
                            >
                              <ul
                                className="css-1glzrmu css-h7r55a css-u7q1iu"
                              >
                                <GridItem
                                  className=""
                                  component="li"
                                  grow={1}
                                  shrink={1}
                                >
                                  <li
                                    className=" css-1gs0ko2"
                                  >
                                    <Price
                                      className=""
                                      currency="EUR"
                                      discounted={true}
                                      fractions={true}
                                      taxDisclaimer={false}
                                      unitPrice={5}
                                      unitPriceMin={0}
                                    >
                                      <div
                                        aria-label="price.label"
                                        className="css-izofhs  css-1ncyhu"
                                        data-test-id="minPrice: 0 price: 5 currency: EUR"
                                      >
                                        <FormatPrice
                                          className=""
                                          currency="EUR"
                                          fractions={true}
                                          price={5}
                                        >
                                          <span
                                            className=""
                                          >
                                            p
                                          </span>
                                        </FormatPrice>
                                      </div>
                                    </Price>
                                  </li>
                                </GridItem>
                                <GridItem
                                  className=""
                                  component="li"
                                  grow={0}
                                  shrink={1}
                                >
                                  <li
                                    className=""
                                  >
                                    <PriceStriked
                                      className=""
                                      currency="EUR"
                                      value={10}
                                    >
                                      <div
                                        className="css-1sagvrb  "
                                      >
                                        <span
                                          aria-label="price.label_old_price"
                                          data-test-id="strikedPrice: 10"
                                        >
                                          <FormatPrice
                                            className=""
                                            currency="EUR"
                                            fractions={true}
                                            price={10}
                                          >
                                            <span
                                              className=""
                                            >
                                              p
                                            </span>
                                          </FormatPrice>
                                        </span>
                                      </div>
                                    </PriceStriked>
                                  </li>
                                </GridItem>
                              </ul>
                            </Grid>
                            <Grid
                              className=""
                              component="ul"
                              wrap={false}
                            >
                              <ul
                                className=" css-h7r55a"
                              >
                                <GridItem
                                  className=""
                                  component="li"
                                  grow={0}
                                  shrink={1}
                                >
                                  <li
                                    className=""
                                  >
                                    <PriceInfo
                                      className="css-1gftye4"
                                      text="Price Info"
                                    >
                                      <div
                                        className="css-1kqiarg css-1gftye4"
                                        dangerouslySetInnerHTML={
                                          Object {
                                            "__html": "Price Info",
                                          }
                                        }
                                        data-test-id="priceInfo: Price Info"
                                      />
                                    </PriceInfo>
                                  </li>
                                </GridItem>
                              </ul>
                            </Grid>
                          </ProductGridPrice>
                        </Component>
                      </Portal>
                      <Portal
                        name="product-item.price.after"
                        props={
                          Object {
                            "productId": "PR0DUCTID",
                          }
                        }
                      />
                    </div>
                  </ProductCardPrice>
                </div>
              </div>
            </Link>
          </Connect(Link)>
        </ProductCardRender>
      </section>
    </ProductCard>
  </Connect(ProductCard)>
</Provider>
`;

exports[`<ProductCard /> should render with a custom render prop 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(ProductCard)
    productId="PR0DUCTID"
    render={[Function]}
  >
    <ProductCard
      dispatch={[Function]}
      product={
        Object {
          "featuredImageUrl": null,
          "id": "PR0DUCTID",
          "name": "Product Name",
          "price": Object {
            "currency": "EUR",
            "discount": 50,
            "info": "Price Info",
            "unitPrice": 5,
            "unitPriceStriked": 10,
          },
          "rating": Object {
            "average": 80,
            "count": 4,
            "reviewCount": 3,
          },
        }
      }
      productId="PR0DUCTID"
      render={[Function]}
      shadow={true}
      style={Object {}}
    >
      <section
        className={
          Object {
            "data-css-5luenq": "",
          }
        }
        data-test-id="Product: Product Name"
        style={
          Object {
            "boxShadow": "0 4px 8px rgba(0, 0, 0, 0.16)",
          }
        }
      >
        <div>
          Custom Output
        </div>
      </section>
    </ProductCard>
  </Connect(ProductCard)>
</Provider>
`;
